--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "honey-ai",
+  "name": "honey-ai-ultimate",
   "version": "1.0.0",
-  "main": "index.html",
-  "license": "MIT",
   "dependencies": {
-    "groq-sdk": "^0.3.3",
-    "node-fetch": "^3.3.2"
+    "groq-sdk": "^0.3.3"
   }
 }
